gcc/testsuite/g++.dg/modules/p0713-2.C
int j; // { dg-message "ended here" }
module; // { dg-error "must be within" }
// { dg-error "expected" "" { target *-*-* } .-1 }
